welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:7: error: not found: type Red
def faireV(c:Red){
             ^MethodsPicture:8: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
	setCouleurBrosse();
                        ^