welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {def marquer(){
	baisseBrosse();
	leveBrosse();
}
def faireV(c:Red){
	setCouleurBrosse();
	avance();
	marquer();
	avance();
	gauche();
	avance();
	marquer();
	droite();
	avance();
	droite();
	avance();
	marquer();
	gauche();
	avance();
	gauche();
}
faireV();

}
